cmake_minimum_required(VERSION 3.17)
project(boj)

set(CMAKE_CXX_STANDARD 14)

add_executable(boj "source_code/11399.cpp")
add_executable(1931 "source_code/1931.cpp")
add_executable(11399 "source_code/11399.cpp")
add_executable(2217 "source_code/2217.cpp")
add_executable(1946 "source_code/1946.cpp")
add_executable(test "source_code/test.cpp")